--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="https://balkrishnabk.github.io/#about" target="_parent">About</a>
+                <a href="#about" target="_parent">About</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#experience" target="_parent">Experience</a>
+                <a href="#experience" target="_parent">Experience</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#responsibilities" target="_parent">Responsibilities</a>
+                <a href="#responsibilities" target="_parent">Responsibilities</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#honors" target="_parent">Honors & awards</a>
+                <a href="#honors" target="_parent">Honors & awards</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#skills" target="_parent">Skills</a>
+                <a href="#skills" target="_parent">Skills</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#certificates" target="_parent">Certifications and Key Courses</a>
+                <a href="#certificates" target="_parent">Certifications and Key Courses</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#education" target="_parent">Education</a>
+                <a href="#education" target="_parent">Education</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#publications" target="_parent">Publications</a>
+                <a href="#publications" target="_parent">Publications</a>
             </li>
             <li>
-                <a href="https://balkrishnabk.github.io/#contact" target="_parent">Contact</a>
+                <a href="#contact" target="_parent">Contact</a>
             </li>
         </ul>
     </header>
