--- a/index.html
+++ b/index.html
@@ -751,6 +751,8 @@
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/balkrishna-londhe-5335b088" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="balkrishna-londhe-5335b088" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/balkrishna-londhe-5335b088?trk=profile-badge">Balkrishna Londhe</a></div>
+              
                         </li>
                         <li>
                             <a href="https://www.credly.com/users/balkrishna-londhe" target="_blank" rel="noopener noreferrer"><i class="fa fa-star-o" aria-hidden="true"></i></a>
