Added awards and appreciations

--- a/index.html
+++ b/index.html
@@ -540,6 +540,10 @@
                     <p>
                         <br><br>
                         <li>
+                            Amazon Web Services Certified Cloud Practitioner on 2021-05-15
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/AWS%20Certified%20Cloud%20Practitioner%20certificate.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                        </li>
+                        <li>
                             Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-03
                             <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
                         </li>
