Updated resume and Instagram link

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div id="lead-content">
             <h1>Balkrishna Atmaram Londhe</h1>
             <h2><b>DevOps Engineer</b></h2>
+            <h3><b>Senior Engineer - Cloud Services and Software</b></h3>
             <a href="images/Balkrishna_Londhe_DevOps_Engineer.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -770,7 +771,7 @@
                             <a href="https://www.credly.com/users/balkrishna-londhe" target="_blank" rel="noopener noreferrer"><i class="fa fa-star-o" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://instagram.com/balkrishna_atmaram_londhe" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://instagram.com/the_bk17" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="tel:+919325877900" target="_blank" rel="noopener noreferrer"><i class="fa fa-mobile-phone" aria-hidden="true"></i></a>
