--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Confident DevOps Engineer with exemplary expertise in background designing, testing, and implementing infrastructure and routine application maintenance tasks. Flexible professional with experience developing and building IT solutions. Spent 3+ years developing the skills to increase velocity, reliability, and quality with a high focus on security. Deep experience with Docker, Kubernetes, and AWS. Consistent team player with exemplary multitasking skills. Hands-on experience on managing micro Services using Docker and Kubernetes. Experienced with principles and best practices of Software Configuration Management in Agile, Waterfall methodologies. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes. Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, Written some of the Docker files for Developing Images. Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet,  Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort. Implemented CI/CD Process with Jenkins and UCD/Ansible to have automation of Continues Integration, Continues Delivery, and Continues Deployment. Involved in Configuring Different jobs like Freestyle and Pipeline Projects and Multi-Branch Project. Hands-on experience in Creating Distributed Environment using Master-Slave Architecture. Involved in Configuring Nexus Repository and JFrog  Repository for Managing Artifacts. Experienced in Creating and Managing HTTP and Container Servers like Nginx, HTTP Server, and Tomcat.
+                        Working as the Senior Engineer - Cloud Services and Software with certified AWS Certified Solutions Architect Associate. Holding 5+ years of experience as a DevOps Engineer with exemplary expertise in Docker, Kubernetes, AWS, Jenkins, CI/CD and Terraform. Got multiple appreciations and achieved learning of different tools and certifications as well. Worked with a team as a strategic and passionate member. Flexible professional experience in developing and building IT solutions. Hands-on experience in managing micro-Services using Docker and Kubernetes, Also infrastructure as a code using Terraform. Specialized in principles and best practices of Software Configuration Management in Agile, and Waterfall methodologies. Developed the skills to increase velocity, reliability, and quality with a high focus on security. Deep experience in background designing, testing, implementing infrastructure, and routine application maintenance tasks. Consistent team player with exemplary multitasking skills.
                     </p>
                 </div>
             </div>
@@ -94,7 +94,23 @@
     <div id="experience" class="background-alt">
         <h2 class="heading"><b>Experience</b></h2>
         <div id="experience-timeline">
-            <div data-date="April 2018 – till date">
+            <div data-date="December 2021 - Till Date">
+                <h3>LTIMindtree</h3>
+                <h4>Senior Engineer - Cloud Services and Software</h4>
+                <p>
+                    I am working as a Senior Engineer - Cloud Services and Software in LTIMindtree. Working with Republic client. My primary responsibilities are to work with the development team. Update infrastructure as per requirement using Terraform. Working on the different AWS services like EC2, Lambda, Cloudfront, IAM, S3, EKS, SQS, SNS and etc. Coordinating with a DevOps team of 4 members. Supporting client requirements and providing production support as well. For Automation working on tools like Terraform. For pipeline using Jenkins and GitHub actions. 
+                    Roles and Responsibilities:
+                        • Member of DevOps team who worked with Republic Client
+                        • Automation of CI/CD pipeline using Jenkins and GitHub action
+                        • Responsible for designing and implementing end-to-end automated delivery for multiple applications
+                        • Supporting client environments for deployment and monitoring environments both production and non-production
+                        • Wrote Infrastructure as a Code using Terraform
+                        • Worked on tools like – Jenkins, Grafana, GitHub, Linear, Pritunl, Notion, Graylog, Nexus3, OTS, and AWS Services
+                        • Deployment and Management of applications on AWS services and EKS cluster
+                    Skills: Notion · DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Shell Scripting · Jenkins · Docker · Linux · Bash · Git · GitHub · AWS Lambda · Terraform · Continuous Integration and Continuous Delivery (CI/CD) 
+                </p>
+            </div>
+            <div data-date="April 2018 – December 2021">
                 <h3>IBM India Private Limited</h3>
                 <h4>DevOps Engineer</h4>
                 <p>
@@ -496,26 +512,33 @@
     <div id="skills">
         <h2 class="heading"><b>Skills</b></h2>
         <ul>
+            <li>Amazon Web Services</li>
+            <li>Terraform</li>
             <li>Kubernetes</li>
             <li>Docker</li>
             <li>GitHub</li>
+            <li>GitHub Actions</li>
             <li>GitLab</li>
             <li>Jenkins</li>
             <li>IBM Urban Code Deploy</li>
+            <li>Helm</li>
             <li>Ansible</li>
+            <li>Istio</li>
+            <li>Traefik</li>
             <li>Jfrog</li>
             <li>Nexus</li>
+            <li>OTS</li>
             <li>IBM Cloud Container Registry</li>
             <li>IBM Cloud Private</li>
-            <li>IBM Kubernetes Service</li>            
-            <li>Amazon Web Services</li>
+            <li>IBM Kubernetes Service</li>
             <li>Amazon Web Services Cloud</li>
             <li>Bash Script</li>
-            <li>Python</li>
-            <li>Groovy Script</li>
             <li>Kafka - Zookeeper</li>
             <li>Vault</li>
             <li>JIRA</li>
+            <li>Confluence</li>
+            <li>Linear</li>
+            <li>Notion</li>
             <li>jFrog Artifactory</li>
             <li>Nexus Repository</li>
             <li>Docker Trusted Registry</li>
@@ -524,19 +547,17 @@
             <li>Grafana-Prometheus</li>
             <li>Zipkin</li>
             <li>AppDynamics</li>
+            <li>HashiCorp Vault and Kubernetes Secrets</li>
             <li>C</li>
             <li>C++</li>
+            <li>Python</li>
+            <li>Groovy Script</li>
             <li>Spring Boot</li>
-            <li>Confluence</li>
             <li>IBM API Connect</li>
-            <li>Istio</li>
             <li>Postman</li>
             <li>Newman</li>
-            <li>AppDynamics</li>
             <li>Apache</li>
             <li>Tomcat</li>
-            <li>HashiCorp Vault and Kubernetes Secrets</li>
-            <li>Helm</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -748,7 +769,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2021 Balkrishna Atmaram Londhe
+                        Copyright &copy; 2023 Balkrishna Atmaram Londhe
                     </p>
                 </div>
                 <div class="col-sm-2 top">
