--- a/index.html
+++ b/index.html
@@ -114,7 +114,24 @@
                 <h3>IBM India Private Limited</h3>
                 <h4>DevOps Engineer</h4>
                 <p>
-                    As an DevOps Engineer, worked on the automation of CI/CD scripts using dev tools. Worked with multiple clients. Responsible for design and implementation of end to end automated delivery for multiple applications. Also, part of the open banking, Digital Platform, and DevOps team in the Bendigo project. Responsible for managing Dev tools and managing deployments. Worked on different tools. Worked on multiple Deployment and Integration tools. As well worked on multiple Image repositories and Binary management tools. My primary work is to manage deployments. Working on GitLab for Source Code Management and the same we are using as Integration and deployment tools as well but initially, we used to have GitHub as SCM and Jenkins as Integration tool and Ansible as Deployment tool. For the Image registry now we are using Jfrog but initially, we used to have IBM cloud Image Registry. In this project, responsible for the installation of Integration tools like Jenkins, Deployment tools like Ansible, and management of them. In this project, deployed code on IBM Cloud Kubernetes Service platforms and now deploying on Amazon Web Services platform. Responsible for the installation of Integration tools like Jenkins, Deployment tools like Urban Code Deploy, and Ansible. Also, the Image repository setup is done by me like JFrog and Nexus. For source code management we used Github. Even my role was to set up deployment environments like Kubernetes cluster and docker environment. Even did deployment on single standalone VM's as well. Worked on the setup of ELK, Grafana, Prometheus, Zipkin, vault, and JIRA also management was with me for all this. 
+                    Worked as a DevOps Engineer in IBM since April 2018 to December 2021. Achieved IBM Champion Learner Gold for two consecutive years 2020 and 2021. Facilitated by Manager's Choice Award twice in 2019 in the DIP project. 
+                    \n Got a special appreciation from the IBM Sector lead of IBM India. Appreciated by BEN client as a BEN's Superstar in 2020. In 2021 Honored with an Eminence & Excellence Award from the Manager for being a critical resource in the BEN project. \n Achieved 41 badges as a learning activity. Focused on learning as well. Worked in the Banking industry domain.
+                    Roles and Responsibilities:
+                        • Member of DevOps team which worked with multiple clients
+                        • Automation of CI/CD pipeline using Jenkins, Ansible, GitLab, and IBM UCD
+                        • Responsible for designing and implementing end-to-end automated delivery for multiple applications
+                        • Supporting client environments for deployment and monitoring environments both production and non-production
+                        • Wrote Shell scripts to automate the installation of the Kubernetes cluster in single script command
+                        • Automation Scripts for adding dynamic Prometheus target, dynamic creation of Grafana dashboard, dynamic port allocation, dynamic virtual server entry
+                        • Worked on tools like – Jenkins, Ansible, ELK, Grafana, Prometheus, ConfigServer, HystricDashboard, KafDrop, Eureka, SonarQube, Zipkin, AppDynamics, and Splunk, GitLab
+                        • Deployment and Management of application on IBM Kubernetes Service and cluster
+                        • Plays a role in Linux Administration
+                        • Created System metric Dashboard on Grafana for 50+ VMs
+                        • Worked on installation and management of Istio and NFS
+                        • Worked on Image and artifactory management using tools like Nexus3 and JFrog
+                        • Worked on Service Mesh (Istio) to perform deployment for Apic, Microservices
+                        • Creating, updating YAML files to prepare a continuous delivery pipeline, and deploying using Helm Chart on Kubernetes Cluster
+                    Skills: DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Agile Project Management · Agile Methodologies · Shell Scripting · Jenkins · Docker · Ubuntu · JIRA · Linux · Bash · Git · GitHub · AWS Lambda · Gitlab · Ansible · Continuous Integration and Continuous Delivery (CI/CD) · Confluence · CI · Artifactory 
                 </p>
             </div>
         </div>
