--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <h3>LTIMindtree</h3>
                 <h4>Senior Engineer - Cloud Services and Software</h4>
                 <p>
-                    I am working as a Senior Engineer - Cloud Services and Software in LTIMindtree. Working with Republic client. My primary responsibilities are to work with the development team. Update infrastructure as per requirement using Terraform. Working on the different AWS services like EC2, Lambda, Cloudfront, IAM, S3, EKS, SQS, SNS and etc. Coordinating with a DevOps team of 4 members. Supporting client requirements and providing production support as well. For Automation working on tools like Terraform. For pipeline using Jenkins and GitHub actions. 
+                    I am working as a Senior Engineer - Cloud Services and Software in LTIMindtree with Republic client. My primary responsibilities are to work with the development team. <br> Create and Update infrastructure as per requirement using Terraform. Working on the different AWS services like EC2, Lambda, Cloudfront, IAM, S3, EKS, SQS, SNS,  EC2, S3, and RDS, including backups, patches, and scaling, etc.<br> Coordinating with a DevOps team of 4 members. Supporting client requirements and providing production support as well. For Automation working on tools like Terraform. For pipeline using Jenkins and GitHub actions. <br>
                     Roles and Responsibilities:
                         • Member of DevOps team who worked with Republic Client
                         • Automation of CI/CD pipeline using Jenkins and GitHub action
@@ -114,12 +114,12 @@
                 <h3>IBM India Private Limited</h3>
                 <h4>DevOps Engineer</h4>
                 <p>
-                    Worked as a DevOps Engineer in IBM since April 2018 to December 2021. Achieved IBM Champion Learner Gold for two consecutive years 2020 and 2021. Facilitated by Manager's Choice Award twice in 2019 in the DIP project. 
-                    \n Got a special appreciation from the IBM Sector lead of IBM India. Appreciated by BEN client as a BEN's Superstar in 2020. In 2021 Honored with an Eminence & Excellence Award from the Manager for being a critical resource in the BEN project. \n Achieved 41 badges as a learning activity. Focused on learning as well. Worked in the Banking industry domain.
-                    Roles and Responsibilities:
-                        • Member of DevOps team which worked with multiple clients
-                        • Automation of CI/CD pipeline using Jenkins, Ansible, GitLab, and IBM UCD
-                        • Responsible for designing and implementing end-to-end automated delivery for multiple applications
+                    Worked as a DevOps Engineer in IBM since April 2018 to December 2021. Achieved IBM Champion Learner Gold for two consecutive years 2020 and 2021. Facilitated by Manager's Choice Award twice in 2019 in the DIP project. <br>
+                    Got a special appreciation from the IBM Sector lead of IBM India. Appreciated by BEN client as a BEN's Superstar in 2020. In 2021 Honored with an Eminence & Excellence Award from the Manager for being a critical resource in the BEN project.<br> Achieved 41 badges as a learning activity. Focused on learning as well. Worked in the Banking industry domain.<br>
+                    Roles and Responsibilities:<br>
+                        <li>Member of DevOps team which worked with multiple clients</li>
+                        <li>Automation of CI/CD pipeline using Jenkins, Ansible, GitLab, and IBM UCD</li>
+                        <li>Responsible for designing and implementing end-to-end automated delivery for multiple applications</li>
                         • Supporting client environments for deployment and monitoring environments both production and non-production
                         • Wrote Shell scripts to automate the installation of the Kubernetes cluster in single script command
                         • Automation Scripts for adding dynamic Prometheus target, dynamic creation of Grafana dashboard, dynamic port allocation, dynamic virtual server entry
