--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <h2 class="heading"><b>About Me</b></h2>
                 </div>
                 <div class="col-md-8">
-                    <p>
+                    <!-- <p> -->
                         Working as the Senior Engineer - Cloud Services and Software with certified AWS Certified Solutions Architect Associate. Holding 5+ years of experience as a DevOps Engineer with exemplary expertise in Docker, Kubernetes, AWS, Jenkins, CI/CD and Terraform. Got multiple appreciations and achieved learning of different tools and certifications as well. Worked with a team as a strategic and passionate member. Flexible professional experience in developing and building IT solutions. Hands-on experience in managing micro-Services using Docker and Kubernetes, Also infrastructure as a code using Terraform. Specialized in principles and best practices of Software Configuration Management in Agile, and Waterfall methodologies. Developed the skills to increase velocity, reliability, and quality with a high focus on security. Deep experience in background designing, testing, implementing infrastructure, and routine application maintenance tasks. Consistent team player with exemplary multitasking skills.
-                    </p>
+                    <!-- </p> -->
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
             <div data-date="December 2021 - Till Date">
                 <h3>LTIMindtree</h3>
                 <h4>Senior Engineer - Cloud Services and Software</h4>
-                <p>
+                <!-- <p> -->
                     I am working as a Senior Engineer - Cloud Services and Software in LTIMindtree with Republic client. My primary responsibilities are to work with the development team. <br> Create and Update infrastructure as per requirement using Terraform. Working on the different AWS services like EC2, Lambda, Cloudfront, IAM, S3, EKS, SQS, SNS,  EC2, S3, and RDS, including backups, patches, and scaling, etc.<br> Coordinating with a DevOps team of 4 members. Supporting client requirements and providing production support as well. For Automation working on tools like Terraform. For pipeline using Jenkins and GitHub actions. <br>
                     Roles and Responsibilities: <br>
                         <li>Member of DevOps team who worked with Republic Client</li>
@@ -104,13 +104,13 @@
                         <li>Wrote Infrastructure as a Code using Terraform</li>
                         <li>Worked on tools like – Jenkins, Grafana, GitHub, Linear, Pritunl, Notion, Graylog, Nexus3, OTS, and AWS Services</li>
                         <li>Deployment and Management of applications on AWS services and EKS cluster</li>
-                    <b>Skills: Notion · DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Shell Scripting · Jenkins · Docker · Linux · Bash · Git · GitHub · AWS Lambda · Terraform · Continuous Integration and Continuous Delivery (CI/CD) </b>
-                </p>
+                    <b>Skills:</b> Notion · DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Shell Scripting · Jenkins · Docker · Linux · Bash · Git · GitHub · AWS Lambda · Terraform · Continuous Integration and Continuous Delivery (CI/CD)
+                <!-- </p> -->
             </div>
             <div data-date="April 2018 – December 2021">
                 <h3>IBM India Private Limited</h3>
                 <h4>DevOps Engineer</h4>
-                <p>
+                <!-- <p> -->
                     Worked as a DevOps Engineer in IBM since April 2018 to December 2021. Achieved IBM Champion Learner Gold for two consecutive years 2020 and 2021. Facilitated by Manager's Choice Award twice in 2019 in the DIP project. <br>
                     Got a special appreciation from the IBM Sector lead of IBM India. Appreciated by BEN client as a BEN's Superstar in 2020. In 2021 Honored with an Eminence & Excellence Award from the Manager for being a critical resource in the BEN project.<br> Achieved 41 badges as a learning activity. Focused on learning as well. Worked in the Banking industry domain.<br>
                     Roles and Responsibilities:<br>
@@ -134,8 +134,8 @@
                         <li>Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, written some of the Docker files for Developing Images</li>
                         <li>Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet, Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort</li>
                         <li>Setting Grafana dashboard using InfluxDB and Telegraph which will monitor over 50+ VM’s to check health status of new & existing infrastructure.</li>
-                    <b>Skills: DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Agile Project Management · Agile Methodologies · Shell Scripting · Jenkins · Docker · Ubuntu · JIRA · Linux · Bash · Git · GitHub · AWS Lambda · Gitlab · Ansible · Continuous Integration and Continuous Delivery (CI/CD) · Confluence · CI · Artifactory </b>
-                </p>
+                    <b>Skills: </b> DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Agile Project Management · Agile Methodologies · Shell Scripting · Jenkins · Docker · Ubuntu · JIRA · Linux · Bash · Git · GitHub · AWS Lambda · Gitlab · Ansible · Continuous Integration and Continuous Delivery (CI/CD) · Confluence · CI · Artifactory
+                <!-- </p> -->
             </div>
         </div>
     </div>
@@ -205,83 +205,83 @@
                         <br><br>
                         <li>
                             Amazon Web Services Certified Solution Architect on 2021-10-30
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/AWS%20Certified%20Cloud%20Practitioner%20certificate.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/AWS%20SAA.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Amazon Web Services Certified Cloud Practitioner on 2021-05-15
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/AWS%20Certified%20Cloud%20Practitioner%20certificate.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/AWS%20Certified%20Cloud%20Practitioner%20certificate.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Microsoft Certified: Azure Fundamentals from Microsoft on 2021-04-03
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Azure%20Fundamentals%20AZ-900.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             IBM Cloud Private - Continuous Integration/Continuous Delivery Pipelines from IBM on 2021-04-22
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/CI-CD-1.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/CI-CD-1.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             DevOps for DevOps Project Team Members from IBM on 2020-06-30
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/DevOps%20for%20DevOps%20Project%20Team%20Members.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/DevOps%20for%20DevOps%20Project%20Team%20Members.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             DevSecOps Essentials from IBM on 2020-06-25
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/DevSecOps_Essentials.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/DevSecOps_Essentials.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             GitLab introduction from IBM on 2020-06-30
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/GITLab%20introduction.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/GITLab%20introduction.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Hands-On Auto DevOps with GitLab CI from IBM on 2020-06-30
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Hands-On%20Auto%20DevOps%20with%20GitLab%20CI.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Hands-On%20Auto%20DevOps%20with%20GitLab%20CI.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Beyond the Basics: Istio and IBM Cloud Kubernetes Service from IBM on 2019-01-27
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Beyond_the_Basics__Istio_and_IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Beyond_the_Basics__Istio_and_IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Containers, K8s, and Istio on IBM Cloud from IBM on 2019-01-27
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Containers__K8s_and_Istio_on_IBM_Cloud.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Containers__K8s_and_Istio_on_IBM_Cloud.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             IBM Cloud Kubernetes Service from IBM on 2019-01-27
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Docker Essentials: A Developer Introduction from IBM on 2019-01-18
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Docker_Essentials__A_Developer_Introduction.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Docker_Essentials__A_Developer_Introduction.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Getting started with Microservices with Istio and IBM Cloud Kubernetes Service from IBM on 2019-01-20
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Getting_started_with_Microservices_with_Istio_and_IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Getting_started_with_Microservices_with_Istio_and_IBM_Cloud_Kubernetes_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Get started with Kubernetes and IBM Cloud Container Service from IBM on 2018-07-05
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Get_started_with_Kubernetes_and_IBM_Cloud_Container_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Get_started_with_Kubernetes_and_IBM_Cloud_Container_Service.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             IBM Cloud Essentials from IBM on 2018-05-03
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Cloud_Essentials.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Cloud_Essentials.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             IBM Garage Methodology Explorer from IBM on 2021-04-23
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Garage_Methodology_Explorer.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Garage_Methodology_Explorer.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Enterprise Design Thinking Co-Creator from IBM on 2020-06-26
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Enterprise_Design_Thinking_Co-Creator.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Enterprise_Design_Thinking_Co-Creator.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Enterprise Design Thinking Practitioner from IBM on 2019-01-19
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Enterprise_Design_Thinking_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Enterprise_Design_Thinking_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             IBM Automation Essentials from IBM on 2020-04-04
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Automation__Compass.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/IBM_Automation__Compass.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                         <li>
                             Cognitive Practitioner from IBM on 2018-06-02
-                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Cognitive_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see certificate)</a>
+                            <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Cognitive_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
                     </p>
                 </div>
